# builder

./: .env  .env-docker  .env-nix-shell  .gitignore  Dockerfile  Procfile  README.md  package.json  procfile  vue.config.js
devConductor/: developer.yaml
dna/: builder_kanban.dna  happ.yaml  tagger.dna
dna/builder_developer/: Cargo.toml  README.md
dna/builder_kanban/: builder_kanban.dna  dna.yaml
dna/builder_kanban/builder_kanban.dna.workdir/: dna.json
dna/builder_kanban/tests/: package.json
dna/kanban/: Cargo.toml
dna/kanban/kanban.dna.workdir/: dna.json
dna/kanban/tests/: package.json
dna/tagger/: Cargo.toml  dna.yaml  tagger.dna
dna/tagger/tagger.dna.workdir/: dna.json
dna/tagger/tests/: package.json
dna/tagger/zomes/tagger/: Cargo.toml
dna/tagger/zomes/tagger/src/: error.rs  lib.rs
dna/tagger/zomes/tagger/src/entries/tag/: handlers.rs  mod.rs
production-conductor/: connect.js  decode.js  getCellIds.js  installHapp.js  production-conductor.yaml
snippets/: clients.txt  drawer.txt  home.txt  routes.txt
socket/: .env  index.js  package.json
socket/devConductor/: developer.yaml
socket/templates/conductor/: developer.yaml
socket/templates/entryTypes/: project.rs
socket/templates/socket/: index.js
socket/templates/store/: index.js
src/: App.vue  background.js  main.js
src/components/: Agent.vue  CodeWindow.vue  DemoAgent.vue  DnaTemplate.vue  Editor.vue  FileList.vue  FileSharing.vue  FileTree.vue  ImageEditor.vue  Message.vue  Messages.vue  TestAgents.vue  WebPartTemplate.vue
src/plugins/: index.js  vuetify.js
(+117 files in other folders)
