[package]
name = "tagger"
version = "0.0.1"
authors = [ "philip.beadle@holo.host" ]
edition = "2018"

[lib]
name = "tagger"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
hdk = { git = "https://github.com/holochain/holochain.git", branch = "develop" }
serde = "=1.0.123"
chrono = { version = "0.4", features = ['alloc', 'std']}
derive_more = "0.99.9"
thiserror = "1.0.20"
